--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<li><a href="./facilities/facilities.html">FACILITIES</a></li>
 				<li><a href="./activities/activities.html">ACTIVITIES</a></li>
 				<li><a href="./placements/placements.html">PLACEMENTS</a></li>
-				<li><a href="./admission/admission.hrml">ADMISSION</a></li>
+				<li><a href="./admission/admission.html">ADMISSION</a></li>
 			</ul>
 		</header>
 		<div class="hero">
