--- a/facilities/facilities.html
+++ b/facilities/facilities.html
@@ -46,7 +46,7 @@
 				<li class="facilities"><a href="../facilities/facilities.html">FACILITIES</a></li>
 				<li><a href="../activities/activities.html">ACTIVITIES</a></li>
 				<li><a href="../placements/placements.html">PLACEMENTS</a></li>
-				<li><a href="../admission/admission.hrml">ADMISSION</a></li>
+				<li><a href="../admission/admission.html">ADMISSION</a></li>
 			</ul>
 		</header>
 		<div class="header-img" id="header">
