--- a/placements/placements.html
+++ b/placements/placements.html
@@ -40,7 +40,7 @@
 				<li><a href="../facilities/facilities.html">FACILITIES</a></li>
 				<li><a href="../activities/activities.html">ACTIVITIES</a></li>
 				<li class="placements"><a href="../placements/placements.html">PLACEMENTS</a></li>
-				<li><a href="../admission/admission.hrml">ADMISSION</a></li>
+				<li><a href="../admission/admission.html">ADMISSION</a></li>
 			</ul>
 		</header>
 		<!-- <section class="section1">
