--- a/activities/activities.html
+++ b/activities/activities.html
@@ -37,7 +37,7 @@
 				<li><a href="../about/about.html">ABOUT</a></li>
 				<li><a href="../academics/academics.html">ACADEMICS</a></li>
 				<li><a href="../facilities/facilities.html">FACILITIES</a></li>
-				<li><a href="../activities/activities.html">ACTIVITIES</a></li>
+				<li class="activities"><a href="../activities/activities.html">ACTIVITIES</a></li>
 				<li><a href="../placements/placements.html">PLACEMENTS</a></li>
 				<li><a href="../admission/admission.html">ADMISSION</a></li>
 			</ul>
