--- a/about/about.html
+++ b/about/about.html
@@ -192,6 +192,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
     <script src="../common/nav/nav.js"></script>
     <script src="../common/footer/footer.js"></script>
+    <script src="about.js"></script>
 
 
 
