--- a/placements/placements.html
+++ b/placements/placements.html
@@ -151,9 +151,6 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
 		<script src="../common/nav/nav.js"></script>
 		<script src="../common/footer/footer.js"></script>
+		<script src="./placement.js"></script>
 	</body>
 </html>
-<p>
-	Training & Placements Placement Cell Training Programmes Recruiters Placement
-	Contact Internship MoU
-</p>
