--- a/placements/placements.html
+++ b/placements/placements.html
@@ -57,10 +57,11 @@
 			</div>
 		</section>
 		<section class="section2">
-
 		</section>
 		<section class="section3">
-			<img src="../common/images/tearpaper6.png" alt="" />
+			<img src="../common/images/TearPaperfinal.png" alt="" />
+			<h1>SHK AVIATION ACADEMICS</h1>
+			
 		</section>
 		<section class="section4">
 			<div class="placementCell" id="div">
